xl-as-code/artifacts/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: petclinic
  labels:
    db: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      db: mysql

  template:
    metadata:
      namespace: petclinic
      labels:
        db: mysql
    spec:
      containers:
        - image: mysql:5.7.8
          name: mysql
          ports:
            - name: sqlport
              containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: petclinic
spec:
  selector: 
    db: mysql
  ports:
      - port: 3306
