xl-as-code/artifacts/oks_route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: app-z
  namespace: petclinic
spec:
  to:
    kind: Service
    name: app-z
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
status:
  ingress:
    - routerName: default
      conditions:
        - type: Admitted
          status: 'True'
      wildcardPolicy: None
